rules/ensure_network_policy_configured_in_labels/test/success_pod_no_pod_selector_ns/input/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-pod-network-policy
  namespace: my-namespace
spec:
  podSelector: {}
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
