rules/ensure_network_policy_configured_in_labels/test/success_pod_no_pod_selector_ns/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: my-namespace
  labels:
    app: my-pod
spec:
  containers:
  - name: my-app
    image: my-app:1.0.0
